// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dumb DeckFormDialog Submit button displays an error message if input is invalid 1`] = `
<withTheme(Dialog)
  onDismiss={[MockFunction]}
  visible={true}
>
  <withTheme(DialogTitle)>
    Create New Deck
  </withTheme(DialogTitle)>
  <DialogContent>
    <withTheme(TextInput)
      autoFocus={true}
      error={true}
      label="Title"
      onBlur={[Function]}
      onChangeText={[Function]}
    />
    <withTheme(HelperText)
      type="error"
      visible={true}
    >
      Required
    </withTheme(HelperText)>
  </DialogContent>
  <DialogActions>
    <withTheme(Button)
      onPress={[MockFunction]}
      primary={true}
    >
      Cancel
    </withTheme(Button)>
    <withTheme(Button)
      onPress={[MockFunction]}
      primary={true}
    >
      Create
    </withTheme(Button)>
  </DialogActions>
</withTheme(Dialog)>
`;

exports[`Dumb DeckFormDialog renders properly 1`] = `
<withTheme(Dialog)
  onDismiss={[MockFunction]}
  visible={true}
>
  <withTheme(DialogTitle)>
    Create New Deck
  </withTheme(DialogTitle)>
  <DialogContent>
    <withTheme(TextInput)
      autoFocus={true}
      error={false}
      label="Title"
      onBlur={[Function]}
      onChangeText={[Function]}
    />
    <withTheme(HelperText)
      type="error"
      visible={false}
    />
  </DialogContent>
  <DialogActions>
    <withTheme(Button)
      onPress={[MockFunction]}
      primary={true}
    >
      Cancel
    </withTheme(Button)>
    <withTheme(Button)
      onPress={[MockFunction]}
      primary={true}
    >
      Create
    </withTheme(Button)>
  </DialogActions>
</withTheme(Dialog)>
`;
